--- a/sites/index.html
+++ b/sites/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/indexStyle.css" />
 </head>
 
 <body>
     <header>
         <h1>Ecommerse Test</h1>
         <ul class="Menu">
-            <li>Home</li>
-            <li>Search</li>
-            <li>Contact</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="search.html">Search</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <button>Shopping bag</button>
     </header>
