API integration and create pizza tab

--- a/sites/index.html
+++ b/sites/index.html
@@ -17,6 +17,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="add.html">Add Pizza</a></li>
         </ul>
         <button>Shopping bag</button>
     </header>
